# -Bases-de-la-programacion-en-C-

./: CMakeLists.txt  README.md
Ejercicio 1/: CMakeLists.txt
Ejercicio 1/Apartado 1/: CMakeLists.txt  Utilidad_de_variables.cpp
Ejercicio 1/Apartado 2/: Ambito_de_las_variables.cpp  CMakeLists.txt
Ejercicio 1/Apartado 3/: CMakeLists.txt  Sintaxis_de_Declaracion.cpp
Ejercicio 1/Apartado 4/: CMakeLists.txt  Tipo_de_Datos.cpp
Ejercicio 2/: CMakeLists.txt
Ejercicio 2/Apartado 1/: CMakeLists.txt  Instrucciones_de_Prueba.cpp
Ejercicio 2/Apartado 2/: CMakeLists.txt  (+1 more)
Ejercicio 3/: CMakeLists.txt
Ejercicio 4/: Arrays.cpp  CMakeLists.txt
Ejercicio 5/: CMakeLists.txt
Ejercicio 5/Apartado 1/: CMakeLists.txt  Declaracion_de_una_Funcion.cpp
Ejercicio 5/Apartado 10/: CMakeLists.txt  Funciones_recursiva.cpp
Ejercicio 5/Apartado 11/: CMakeLists.txt  La_funcion_main().cpp
Ejercicio 5/Apartado 2/: CMakeLists.txt  Funciones_y_procedimientos.cpp
Ejercicio 5/Apartado 3/: CMakeLists.txt  Llamada_de_las_funciones.cpp
Ejercicio 5/Apartado 4/: CMakeLists.txt  Gestion_de_las_variables_locales.cpp
Ejercicio 5/Apartado 5/: CMakeLists.txt  Definicion_de_las_funciones_homonimas.cpp  Definicion_de_las_variables_homonimas.cpp
Ejercicio 5/Apartado 6/: CMakeLists.txt  Funciones_con_numero_variable_de_argumentos.cpp
Ejercicio 5/Apartado 7/: Asignacion_de_valores_por_defecto_a_argumentos.cpp  CMakeLists.txt
Ejercicio 5/Apartado 8/: CMakeLists.txt  Funciones_en_linea.cpp
Ejercicio 5/Apartado 9/: CMakeLists.txt  Funciones.h  Funciones_externas_de_tipo_C.cpp  main.cpp
(+8 files in other folders)
